// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> 1`] = `
"<div style=\\"display: inline-block;\\" class=\\"radio\\"><input type=\\"radio\\" name=\\"test-name\\" id=\\"test-id\\">
  <div class=\\"custom-radio\\"></div>
</div>"
`;

exports[`<Radio checked /> 1`] = `
"<div style=\\"display: inline-block;\\" class=\\"radio\\"><input type=\\"radio\\" checked=\\"\\">
  <div class=\\"custom-radio\\"></div>
</div>"
`;
